toggled ui fixed, send button, customized scrollbars

--- a/src/app/components/app/app.scss
+++ b/src/app/components/app/app.scss
@@ -68,13 +68,18 @@ button:hover{
     display: none;
 }
 
-
-
-
-
-
-
-
+/* customized scrollbar */
+.scrollable::-webkit-scrollbar {
+    width: 10px;
+}
+.scrollable::-webkit-scrollbar-track {
+    border-radius: 10px;
+}
+ 
+.scrollable::-webkit-scrollbar-thumb {
+    border-radius: 1px;
+    background: rgba(0, 0, 0, 0.20)
+}
 /*pop up*/
 
 #pop-up{
@@ -137,6 +142,9 @@ aside.toggled {
         margin-right: 5px;
     }
 
+    time {
+        display: none;
+    }
 }
 
 /* SIDEBAR END */
@@ -162,3 +170,4 @@ section.toggled {
 }
 
 /* SECTION END */
+
