--- a/src/app/components/message-form/message-form.scss
+++ b/src/app/components/message-form/message-form.scss
@@ -30,7 +30,7 @@
     .smile-icon:before {
         position: absolute;
         top: 20px;
-        right: 15px;
+        right: 65px;
         width: 22px;
         height: 22px;
         background-image: url('/img/sprite.svg');
@@ -59,5 +59,17 @@
     .file-icon:focus + label,
     .file-icon  + label:hover {
         opacity: 0.6;
+    }
+
+    //send message button
+    .send-button {
+        position: absolute;
+        top: 10px;
+        right: 10px;
+        background: $bright-accent;
+        color: $absolute-white;
+        padding: 10px 15px;
+        font-size: .9rem;
+        border-radius: 15px;
     }
 }
